# pRefStick

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  gitignore  init.py  pRefStick.cpp  package.py  rezbuild.bat  rezbuild.sh
src/: PRefDecal.blink  pRefDecalBake.cpp
tests/: TestScript.nk  TestScript.nk~  TestScript_v02.nk  TestScript_v02.nk~
